--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <body>
     <article id="main">
       <p>コンビニかスーパーに行きます。</p>
+      <img src="img/https://www.pakutaso.com/shared/img/thumb/gohan151214198695_TP_V.jpg" width=300 class="photo">
+      <dl>
+         <dt>調味料の種類</dt><dd>ピリ辛卵かけご飯（ラー油とめんつゆ入り）</dd>
+         <dt>ポイント:</dt><dd>ネギを加えると香りがUP</dd>
     </article>
     </body>
 </html>
