--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <p>コンビニかスーパーに行きます。</p>
       <section class="eggrice_picture">
       <img src="img/https://cdn.sbfoods.co.jp/recipes/03740_l.jpg" width=300 class="photo">
-      <dl>
+      <dl class="explanation">
          <dt>調味料の種類</dt><dd>ピリ辛卵かけご飯（ラー油とめんつゆ入り）</dd>
          <dt>ポイント:</dt><dd>ネギを加えると香りがUP</dd>
     </article>
