--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <article id="main">
       <p>コンビニかスーパーに行きます。</p>
       <section class="eggrice_picture">
-      <img src="img/https://cdn.sbfoods.co.jp/recipes/03740_l.jpg" width=300 class="photo">
+      <img src="img/https://2.bp.blogspot.com/-M4XT5j9LQNo/UchCBeEH5hI/AAAAAAAAVIU/VRwqtw8SdF0/s400/food_tamagokakegohan.png" width=300 class="photo">
       <dl class="explanation">
          <dt>調味料の種類</dt><dd>ピリ辛卵かけご飯（ラー油とめんつゆ入り）</dd>
          <dt>ポイント:</dt><dd>ネギを加えると香りがUP</dd>
