--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          <dt>調味料の種類</dt><dd>ピリ辛卵かけご飯（ラー油とめんつゆ入り）</dd>
          <dt>ポイント:</dt><dd>ネギを加えると香りがUP</dd>
     </article>
-      <input type="submit" value="ok" class="btn">
-      <input type="reset" value="リセット" class="btn">
+      <input type="submit" value="ok" class="btn btn-submit">
+      <input type="reset" value="リセット" class="btn btn-reset">
     </body>
 </html>
