--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
          <dt>調味料の種類</dt><dd>ピリ辛卵かけご飯（ラー油とめんつゆ入り）</dd>
          <dt>ポイント:</dt><dd>ネギを加えると香りがUP</dd>
     </article>
+      <table id="ingredient">
+        <tr><th>ご飯</th><td>茶碗１杯</td><tr>
+        <tr><th>卵</th><td>１個</td><tr>
+        <tr><th>ラー油</th><td>２滴</td><tr>
+        <tr><th>めんつゆ</th><td>大さじ３</td><tr>
+      </table>
       <input type="submit" value="ok" class="btn btn-submit">
       <input type="reset" value="リセット" class="btn btn-reset">
     </body>
